overflow fix

--- a/aboutMe/aboutMe.css
+++ b/aboutMe/aboutMe.css
@@ -1,5 +1,5 @@
 * {
-    overflow: scroll;
+    overflow:inherit;
 }
 
 a {
